prevent mobile overflow

--- a/style.css
+++ b/style.css
@@ -9,6 +9,6 @@ canvas {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    max-height: 100vh;
     z-index: 1;
 }
